k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
  labels:
    app.kubernetes.io/part-of: wordpress-stack
